<resources>
    <string name="app_name">محاميك - محامي</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="dontHaveAnAcc">Don\'t have an Account? </string>
    <string name="signUp">Sign Up</string>
    <string name="id">Id</string>
    <string name="termsAndConditions">Terms And Conditions</string>
    <string name="languageBtn">Language</string>
    <string name="doForgetPassword">Forget Password ?</string>
    <string name="invalidPassword">Invalid password</string>
    <string name="invalidIdOrPassword">Invalid id or password</string>
    <string name="backBtn">backBtn</string>
    <string name="yourId">Your id number</string>
    <string name="firstName">First name</string>
    <string name="middleName">Middle name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="subscribe">Subscription</string>
    <string name="subscribe_purpose1">To subscribe in the application should fill info</string>
    <string name="subscribe_purpose2">All data is reviewed to ensure the validity of this data.</string>
    <string name="uploadCard">Upload card image</string>
    <string name="card_purpose">"put clear image for your card "</string>
    <string name="phone_purpose">Please put valid number to communicate through it.</string>
    <string name="logo">logo</string>
    <string name="name_purpose">Write your full name as it appears on the membership card.</string>
    <string name="phone">Phone number</string>
    <string name="invalidFN">Invalid first name</string>
    <string name="invalidLN">Invalid last name</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="invalidPhone">Invalid phone</string>
    <string name="invalidId">Invalid id</string>
    <string name="invalidCardImage">Not found card image</string>
    <string name="loading">Loading…</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="ok">Ok</string>
    <string name="changePassword">Change Password</string>
    <string name="changePassword_purpose1">For Security reasons please</string>
    <string name="changePassword_purpose2">change your password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="next">Next </string>
    <string name="forgetPassword">Forget Password</string>
    <string name="forgetPassword_purpose1">Write down your phone and </string>
    <string name="forgetPassword_purpose2">wait for reset code</string>
    <string name="emailDoseNotExist">error</string>
    <string name="sendCode">Send Code</string>
    <string name="resetPassword">Reset Password</string>
    <string name="verify">Verify Code</string>
    <string name="resetPassword_purpose1">Write down the code you have</string>
    <string name="resetPassword_purpose2">received in your box</string>
    <string name="codeIsNotCorrect">*Code is not correct</string>
    <string name="addYourProfilePic">Add your profile picture</string>
    <string name="addYourProfilePic_purpose1">Select a clear picture for your self</string>
    <string name="addYourProfilePic_purpose2">to avoid conflicts</string>
    <string name="briefSummary">Brief summary…</string>
    <string name="max">Maximum of 300 characters.</string>
    <string name="selectYourSpecialty">Select your specialty</string>
    <string name="gender">Gender : </string>
    <string name="aqarat">عقارات</string>
    <string name="aam">عام</string>
    <string name="meras">ميراث</string>
    <string name="genyat">جنايات</string>
    <string name="zawagWTalaq">زواج و طلاق</string>
    <string name="hadana">حضانة واستشارات اسرية</string>
    <string name="estsharatQanonya">استشارات قانونية</string>
    <string name="sharekat">شركات</string>
    <string name="defaa">دفاع</string>
    <string name="sharaay">شرعى</string>
    <string name="qadayaAllamaya">قضايا عالمية</string>
    <string name="qadayaBenook">قضايا بنوك</string>
    <string name="hegra">هجرة</string>
    <string name="darayeb">ضرايب</string>
    <string name="dawlyCB">دولى</string>
    <string name="selectLocation">Select location on map</string>
    <string name="updateLocation">Update location on map</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="unit">Unit  name / No.</string>
    <string name="address">Address</string>
    <string name="addWorkLocation">Office Location</string>
    <string name="workLocation_purpose1">"First, Select work location on map "</string>
    <string name="workLocation_purpose2">"then write the The address is detailed  "</string>
    <string name="save">Save</string>
    <string name="addressInDetails">Office Address in Details</string>
    <string name="governorate">Governorate</string>
    <string name="street">Street name</string>
    <string name="buildingNumber">Building number</string>
    <string name="floorNumber">Floor number</string>
    <string name="unitNumber">Office number</string>
    <string name="addressInDetails_purpose1">Choose the governorate first, then Carefully fill in the address of the work place</string>
    <string name="area">Area name</string>
    <string name="officeTime">Office Working Hours</string>
    <string name="officeTime_purpose1">These are the times that will appear to the customer and during which they will be booked</string>
    <string name="officeTime_purpose2">So choose the official working hours for your office carefully</string>
    <string name="saturday">Saturday</string>
    <string name="from">from :</string>
    <string name="to">To :</string>
    <string name="durationOfTheConsultation">Duration of the consultation</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="bookingPrice">Booking Price</string>
    <string name="bookingPrice_purpose1">put the fixed price to book an interview with you.</string>
    <string name="price">ex: 100</string>
    <string name="priceOfPhoneService">ex: 20</string>
    <string name="bookingVoiceCall">Booking a voice call</string>
    <string name="bookingVoiceCall_purpose1">The client can book an appointment for a consultation , he put his phone number and you must call him at the specified time, client pays the amount electronically and the amount is added to your bank account</string>
    <string name="cardNum">Bank Account number…</string>
    <string name="le">L.E</string>
    <string name="payment">Payment</string>
    <string name="payment_purpose1">Choose your payment method</string>
    <string name="payment_purpose2">Pay now to activate the account</string>
    <string name="news">News</string>
    <string name="offer">Offers</string>
    <string name="timesSchedule">Times Schedule</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="source">Source : </string>
    <string name="date">date</string>
    <string name="appointments">Appointments</string>
    <string name="archive">Archive</string>
    <string name="personalInfo">Personal Information</string>
    <string name="addressOnMap">Address on map</string>
    <string name="bookingInOffice">Booking in office :</string>
    <string name="accountSetting">Account Setting</string>
    <string name="helpCenter">Help Center</string>
    <string name="rateApp">Rate Application</string>
    <string name="shareApp">Share Application</string>
    <string name="changeLanguage">Change Language</string>
    <string name="logout">Logout</string>
    <string name="disableAccount">Disable Account</string>
    <string name="disableAccount_purpose1">When the account disabled Clients cannot book an appointment until you return activate the account again</string>
    <string name="editAccountInfo">"Edit Profile "</string>
    <string name="chooseImage">Choose image</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>
    <string name="editYourProfilePic">Edit your profile picture</string>
    <string name="editOfficeTime">Edit office Working Hours</string>
    <string name="editWorkLocation">Edit office Location</string>
    <string name="editAddressInDetails_purpose1">Carefully fill in the address of the work place</string>
    <string name="editBookingPrice">Edit booking price</string>
    <string name="editPassword">Edit Password</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="currentOffer">Current Offer</string>
    <string name="myOffer">My Offers</string>
    <string name="days">day</string>
    <string name="subscribeNow">Subscribe Now</string>
    <string name="addOffer">Add Offer</string>
    <string name="offerTitle">Offer Title</string>
    <string name="offerDescription">Offer description…</string>
    <string name="putOldPrice">put the price before the discount</string>
    <string name="putDiscount">put the discount percentage</string>
    <string name="percentage">%</string>
    <string name="discountEx">40</string>
    <string name="priceAfterDiscount">The price after discount is calculated automatically</string>
    <string name="paymentValue">Payment Value =</string>
    <string name="offerDetails">Offer Details</string>
    <string name="offerPrice">Offer Price</string>
    <string name="priceBefor">Price Before</string>
    <string name="percentageValue">Percentage Value</string>
    <string name="priceAfter">Price After</string>
    <string name="numOfClients">"Number Of Clients: "</string>
    <string name="deleteOffer">Delete Offer</string>
    <string name="offerTime">Offer Time: </string>
    <string name="clientName">Client Name :</string>
    <string name="typeOfCounseling">Type of counseling :</string>
    <string name="clientPhone">Client phone :</string>
    <string name="orderDetails">Order Details</string>
    <string name="orderInfo"> Information</string>
    <string name="orderTime">Order time :</string>
    <string name="orderDate">Order date :</string>
    <string name="orderStatus">Order status :</string>
    <string name="finished">Finished</string>
    <string name="male">male</string>
    <string name="clientRate">Client rate :</string>
    <string name="paymentType">Payment Type :</string>
    <string name="visa">credit</string>
    <string name="applicationSuccessfully">The request has been sent successfully</string>
    <string name="applicationSuccessfully_purpose1">If your request is approved, you will receive a cities within 48 hours containing your id and password in order to be able to access your account.</string>
    <string name="invalidConfirmPassword">Invalid Confirm Password</string>
    <string name="confirmPasswordNotMatched">Confirm password not matched</string>
    <string name="doYouWantToExit">Do you want to exit ?</string>
    <string name="doYouWantToExit_purpose1">The account will not be created until the data is completed.</string>
    <string name="stay">Stay</string>
    <string name="exitNow">Exit Now</string>
    <string name="serverError">Server connection error, try again.</string>
    <string name="dontReceiveTheCode">Don\'t receive the code?</string>
    <string name="resendCode">Resend code</string>
    <string name="female">Female</string>
    <string name="age">Date of birth: </string>
    <string name="invalidDate">Invalid date</string>
    <string name="invalidYear">The age must be bigger than 20 years old</string>
</resources>