<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/mainLin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.start.signIn.signInSteps.payment.PaymentFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"

                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/payment_pic"
                    tools:srcCompat="@drawable/payment_pic">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:text="@string/payment"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:text="@string/payment_purpose1"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/_10sdp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:text="@string/payment_purpose2"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>


                <Button
                    android:fontFamily="@font/cairo_semibold"
                    android:id="@+id/nextBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/curves_yellow_bg"
                    android:contentDescription="@string/signIn"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>