<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/mainLin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"

        tools:context=".ui.start.signIn.signInSteps.changePassword.ChangePasswordFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/change_pass_pic"
                    tools:srcCompat="@drawable/change_pass_pic">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="sans-serif"
                        android:text="@string/changePassword"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/changePassword_purpose1"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/_10sdp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/changePassword_purpose2"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">


                    <EditText
                        android:drawableStart="@drawable/lock_ic"
                        android:drawablePadding="@dimen/_5sdp"
                        android:id="@+id/Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:autofillHints="@string/password"
                        android:background="@drawable/curves_gray_bg"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp"
                        android:text=""
                        android:textColor="@color/etTextColor"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:drawableStart="@drawable/lock_ic"
                        android:drawablePadding="@dimen/_5sdp"
                        android:id="@+id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:autofillHints="@string/confirmPassword"
                        android:background="@drawable/curves_gray_bg"
                        android:hint="@string/confirmPassword"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/etTextColor"
                        android:textSize="@dimen/_14sdp" />

                    <Button
                        android:id="@+id/nextBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/curves_yellow_bg"
                        android:contentDescription="@string/signIn"
                        android:text="@string/next"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_16sdp" />


                </LinearLayout>


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>
</layout>