<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.start.signIn.forgetPassword.ForgetPasswordScreen">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <FrameLayout
                    android:id="@+id/bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_gravity="left"
                        android:id="@+id/backBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@mipmap/back_btn_ic"
                        android:contentDescription="@string/backBtn" />


                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_250sdp"
                        android:contentDescription="@string/logo"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/forgot_password_pic"
                        tools:srcCompat="@drawable/forgot_password_pic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="sans-serif"
                        android:text="@string/forgetPassword"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/forgetPassword_purpose1"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/_10sdp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/forgetPassword_purpose2"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_10sdp">


                    <EditText
                        android:drawableStart="@drawable/email_ic"
                        android:drawablePadding="@dimen/_5sdp"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:autofillHints="@string/email"
                        android:background="@drawable/curves_gray_bg"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:text=""
                        android:textColor="@color/etTextColor"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/emailError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:fontFamily="sans-serif"
                        android:text="@string/emailDoseNotExist"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="@dimen/_10sdp"
                        android:visibility="invisible" />


                    <Button
                        android:id="@+id/forgetPasswordBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/curves_yellow_bg"
                        android:contentDescription="@string/sendCode"
                        android:text="@string/sendCode"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_16sdp" />

                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>
</layout>